[metadata]
name = tkutil
version = file: VERSION
url = https://github.com/pyrustic/tkutil
author = Pyrustic Evangelist
author_email = pyrustic@protonmail.com
maintainer = Pyrustic Evangelist
maintainer_email = pyrustic@protonmail.com
description = Tkinter utilities for Pyrustic
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    library
    tkinter-utilities
    pyrustic
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false

[options.entry_points]
console_scripts =
    tkutil = tkutil.__main__:main
